# swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "description": "This is the document for todos API",
     "version": "1.0.0",
-    "title": "Portfolio API",
+    "title": "Todos API",
     "contact": {
       "email": "innocentingabire01@gmail.com"
     }
@@ -28,38 +28,22 @@
         "operationId": "getTodos",
         "consumes": ["application/json"],
         "produces": ["application/json"],
+        "parameters":[
+          {
+            "name": "token",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "token"
+          }
+        ],
 
         "responses": {
           "200": {
             "description": "request was successful"
           }
         }
-      }
-    },
-    "/api/todos/{todoId}": {
-      "get": {
-        "tags": ["todo"],
-        "summary": "Get one Todo",
-        "description": "",
-        "operationId": "getOneTodo",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "todoId",
-            "description": "Getting one Todo post",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "success"
-          }
-        }
-      }
-    },
-    "/api/user/todos": {
+      },
       "post": {
         "tags": ["todo"],
         "summary": "Create a Todo",
@@ -69,7 +53,7 @@
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
             "required": true,
             "type": "string",
@@ -102,6 +86,34 @@
       }
     },
     "/api/todos/{todoId}": {
+      "get": {
+        "tags": ["todo"],
+        "summary": "Get one Todo",
+        "description": "",
+        "operationId": "getOneTodo",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "token"
+          },
+          {
+            "in": "path",
+            "name": "todoId",
+            "description": "Getting one Todo post",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success"
+          }
+        }
+      },
       "put": {
         "tags": ["todo"],
         "summary": "Update an existing todo",
@@ -111,7 +123,7 @@
         "produces": ["application/xml"],
         "parameters": [
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
             "required": true,
             "type": "string",
@@ -157,7 +169,7 @@
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
             "required": true,
             "type": "string",
@@ -165,16 +177,13 @@
           },
           {
             "in": "path",
-            "name": "blogId",
+            "name": "todoId",
             "required": true
           }
         ],
         "responses": {
           "200":{
             "description":"success"
-          },
-          "400": {
-            "description": "Invalid inputs"
           },
           "404": {
             "description": "Todo not found"
@@ -197,7 +206,36 @@
           {
             "in": "body",
             "name": "body",
-            "description": "You need to login",
+            "description": "User need to login",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UserSignin"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User Logged in"
+          },
+          "500":{
+            "description":"server error"
+          }
+        }
+      }
+    },
+
+    "/api/signup": {
+      "post": {
+        "tags": ["user"],
+        "summary": "signup",
+        "description": "",
+        "operationId": "signupUser",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "You need to signup",
             "required": true,
             "schema": {
               "$ref": "#/definitions/User"
@@ -205,8 +243,11 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "Logged in Successfully"
+          "201": {
+            "description": "User created Successfully"
+          },
+          "500":{
+            "description":"server error"
           }
         }
       }
@@ -216,9 +257,6 @@
     "Todo": {
       "type": "object",
       "properties": {
-        "user":{
-          "type":"string"
-        },
         "title": {
           "type": "string"
         },
@@ -231,7 +269,18 @@
         }
       }
     },
-    
+
+    "UserSignin":{
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
     
     "User": {
       "type": "object",
@@ -244,6 +293,9 @@
         },
         "password": {
           "type": "string"
+        },
+        "confirmPassword":{
+          "type":"string"
         }
       }
     }
